Critical performance fixes: Remove AOS.js, fix 404 images, defer fonts, optimize CSS4

--- a/index.html
+++ b/index.html
@@ -21,29 +21,24 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://images.unsplash.com" crossorigin>
     <link rel="dns-prefetch" href="https://wa.me">
-    <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
-    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" as="style">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous" media="print" onload="this.media='all'">
-    <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous"></noscript>
     <style>
-            font-family: 'Poppins';
-            font-style: normal;
-            font-weight: 400;
-            font-display: swap;
-            src: url('data:font/woff2;base64,') format('woff2');
-        }
-        @font-face {
-            font-family: 'Playfair Display';
-            font-style: normal;
-            font-weight: 400;
-            font-display: swap;
-            src: url('data:font/woff2;base64,') format('woff2');
-        }
+        @font-face{font-family:'Poppins';font-style:normal;font-weight:400;font-display:swap;src:url('data:font/woff2;base64,') format('woff2');}
+        @font-face{font-family:'Playfair Display';font-style:normal;font-weight:400;font-display:swap;src:url('data:font/woff2;base64,') format('woff2');}
+        @font-face{font-family:'Font Awesome 6 Free';font-style:normal;font-weight:900;font-display:swap;src:local('Font Awesome 6 Free Solid'),local('FontAwesome6Free-Solid');}
+        @font-face{font-family:'Font Awesome 6 Brands';font-style:normal;font-weight:400;font-display:swap;src:local('Font Awesome 6 Brands Regular'),local('FontAwesome6Brands-Regular');}
+        .fas,.fa-solid{font-family:'Font Awesome 6 Free';font-weight:900;}
+        .fab,.fa-brands{font-family:'Font Awesome 6 Brands';font-weight:400;}
+        .fa-sparkles:before{content:'\2728';}
+        .fa-whatsapp:before{content:'\f232';}
+        .fa-clock:before{content:'\f017';}
+        .fa-star:before{content:'\f005';}
+        .fa-instagram:before{content:'\f16d';}
+        .fa-facebook:before{content:'\f09a';}
 
-        body { font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Arial, sans-serif; }
-        .hero h1, .section-title, .service-title { font-family: 'Playfair Display', Georgia, serif; }
+        body{font-family:'Poppins',-apple-system,BlinkMacSystemFont,'Segoe UI',Arial,sans-serif;}
+        .hero h1,.section-title,.service-title{font-family:'Playfair Display',Georgia,serif;}
     </style>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@300;400;600;700&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@300;400;600;700&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" media="print" onload="this.media='all';this.onload=null">
     <noscript><link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@300;400;600;700&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet"></noscript>
     <script type="application/ld+json">
     {
