--- a/index.html
+++ b/index.html
@@ -73,199 +73,9 @@
         }
     }
     </script>
-    <style>
-        :root {
-            --primary: linear-gradient(135deg, #5a67d8 0%, #6b46c1 100%);
-            --secondary: linear-gradient(135deg, #ec4899 0%, #dc2626 100%);
-            --accent: linear-gradient(135deg, #3b82f6 0%, #0ea5e9 100%);
-            --luxury: linear-gradient(135deg, #f59e0b 0%, #ea580c 100%);
-            --dark: #1a1a1a;
-            --text-primary: #ffffff;
-            --text-secondary: #f8fafc;
-            --text-dark: #0f172a;
-            --light: #ffffff;
-            --shadow-light: 0 4px 6px -1px rgba(0,0,0,0.1);
-            --shadow-medium: 0 10px 15px -3px rgba(0,0,0,0.1);
-            --shadow-heavy: 0 20px 25px -5px rgba(0,0,0,0.1);
-            --border-radius: 16px;
-            --transition: all 0.3s cubic-bezier(0.4,0,0.2,1);
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Poppins', sans-serif;
-            line-height: 1.6;
-            color: var(--dark);
-            overflow-x: hidden;
-        }
-
-
-        .skip-nav {
-            position: absolute;
-            top: -40px;
-            left: 6px;
-            background: var(--dark);
-            color: white;
-            padding: 8px;
-            text-decoration: none;
-            z-index: 10000;
-            border-radius: 4px;
-            font-weight: 600;
-        }
-        
-        .skip-nav:focus {
-            top: 6px;
-        }
-
-
-        @media (prefers-reduced-motion: reduce) {
-            *, *::before, *::after {
-                animation-duration: 0.01ms !important;
-                animation-iteration-count: 1 !important;
-                transition-duration: 0.01ms !important;
-            }
-        }
-
-
-        .hero {
-            height: 100vh;
-            background: linear-gradient(135deg, rgba(0, 0, 0, 0.7) 0%, rgba(90, 103, 216, 0.8) 100%), url('https://images.unsplash.com/photo-1560066984-138dadb4c035?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80');
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .hero::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: linear-gradient(135deg, rgba(0, 0, 0, 0.4) 0%, rgba(90, 103, 216, 0.3) 100%);
-            animation: shimmer 4s ease-in-out infinite alternate;
-            z-index: 1;
-        }
-
-        @keyframes shimmer {
-            0% { opacity: 0.3; }
-            100% { opacity: 0.7; }
-        }
-
-        .hero-content {
-            z-index: 2;
-            color: var(--text-primary);
-            max-width: 900px;
-            padding: 0 20px;
-            background: rgba(0, 0, 0, 0.3);
-            backdrop-filter: blur(10px);
-            border-radius: var(--border-radius);
-            padding: 40px;
-            border: 1px solid rgba(255, 255, 255, 0.1);
-        }
-
-        .hero h1 {
-            font-family: 'Playfair Display', serif;
-            font-size: clamp(2.5rem, 5vw, 4.5rem);
-            font-weight: 700;
-            margin-bottom: 24px;
-            text-shadow: 3px 3px 6px rgba(0,0,0,0.8), 0 0 20px rgba(0,0,0,0.5);
-            animation: fadeInUp 1s ease-out;
-            line-height: 1.2;
-            letter-spacing: -0.02em;
-            color: #ffffff;
-        }
-
-        .hero .subtitle {
-            font-size: 1.5rem;
-            margin-bottom: 30px;
-            opacity: 0.95;
-            animation: fadeInUp 1s ease-out 0.3s both;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.7);
-            color: #f8fafc;
-            font-weight: 500;
-        }
-
-        .hero p {
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.7);
-            color: #e2e8f0;
-            font-size: 1.1rem;
-            margin-bottom: 20px;
-        }
-
-        .hero-buttons {
-            display: flex;
-            gap: 20px;
-            justify-content: center;
-            flex-wrap: wrap;
-            margin-top: 40px;
-            animation: fadeInUp 1s ease-out 0.6s both;
-        }
-
-        .btn {
-            padding: 16px 32px;
-            border: none;
-            border-radius: var(--border-radius);
-            font-weight: 600;
-            font-size: 1rem;
-            text-decoration: none;
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            gap: 12px;
-            transition: var(--transition);
-            cursor: pointer;
-            position: relative;
-            overflow: hidden;
-            min-height: 48px;
-            min-width: 120px;
-        }
-
-        .btn::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: -100%;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(90deg, transparent, rgba(255,255,255,0.2), transparent);
-            transition: left 0.5s;
-        }
-
-        .btn:hover::before {
-            left: 100%;
-        }
-
-        .btn-primary {
-            background: linear-gradient(135deg, #f59e0b 0%, #ea580c 100%);
-            color: #ffffff;
-            box-shadow: 0 4px 15px rgba(245, 158, 11, 0.4);
-            font-weight: 700;
-        }
-
-        .btn-secondary {
-            background: rgba(255, 255, 255, 0.15);
-            color: #ffffff;
-            border: 2px solid rgba(255, 255, 255, 0.8);
-            backdrop-filter: blur(10px);
-            font-weight: 600;
-        }
-
-        .btn:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 10px 30px rgba(0,0,0,0.3);
-        }
+    <style>:root{--primary:linear-gradient(135deg,#5a67d8 0%,#6b46c1 100%);--secondary:linear-gradient(135deg,#ec4899 0%,#dc2626 100%);--accent:linear-gradient(135deg,#3b82f6 0%,#0ea5e9 100%);--luxury:linear-gradient(135deg,#f59e0b 0%,#ea580c 100%);--dark:#1a1a1a;--text-primary:#fff;--text-secondary:#f8fafc;--text-dark:#0f172a;--light:#fff;--shadow-light:0 4px 6px -1px rgba(0,0,0,.1);--shadow-medium:0 10px 15px -3px rgba(0,0,0,.1);--shadow-heavy:0 20px 25px -5px rgba(0,0,0,.1);--border-radius:16px;--transition:all .3s cubic-bezier(.4,0,.2,1)}*{margin:0;padding:0;box-sizing:border-box}body{font-family:'Poppins',sans-serif;line-height:1.6;color:var(--dark);overflow-x:hidden}.skip-nav{position:absolute;top:-40px;left:6px;background:var(--dark);color:#fff;padding:8px;text-decoration:none;z-index:10000;border-radius:4px;font-weight:600}.skip-nav:focus{top:6px}@media (prefers-reduced-motion:reduce){*,*::before,*::after{animation-duration:.01ms!important;animation-iteration-count:1!important;transition-duration:.01ms!important}}
+.hero{height:100vh;background:linear-gradient(135deg,rgba(0,0,0,.7) 0%,rgba(90,103,216,.8) 100%),url('https://images.unsplash.com/photo-1560066984-138dadb4c035?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80');background-size:cover;background-position:center;background-attachment:fixed;display:flex;align-items:center;justify-content:center;text-align:center;position:relative;overflow:hidden}.hero::before{content:'';position:absolute;top:0;left:0;right:0;bottom:0;background:linear-gradient(135deg,rgba(0,0,0,.4) 0%,rgba(90,103,216,.3) 100%);animation:shimmer 4s ease-in-out infinite alternate;z-index:1}@keyframes shimmer{0%{opacity:.3}100%{opacity:.7}}.hero-content{z-index:2;color:var(--text-primary);max-width:900px;padding:0 20px;background:rgba(0,0,0,.3);backdrop-filter:blur(10px);border-radius:var(--border-radius);padding:40px;border:1px solid rgba(255,255,255,.1)}.hero h1{font-family:'Playfair Display',serif;font-size:clamp(2.5rem,5vw,4.5rem);font-weight:700;margin-bottom:24px;text-shadow:3px 3px 6px rgba(0,0,0,.8),0 0 20px rgba(0,0,0,.5);animation:fadeInUp 1s ease-out;line-height:1.2;letter-spacing:-.02em;color:#fff}.hero .subtitle{font-size:1.5rem;margin-bottom:30px;opacity:.95;animation:fadeInUp 1s ease-out .3s both;text-shadow:2px 2px 4px rgba(0,0,0,.7);color:#f8fafc;font-weight:500}.hero p{text-shadow:2px 2px 4px rgba(0,0,0,.7);color:#e2e8f0;font-size:1.1rem;margin-bottom:20px}.hero-buttons{display:flex;gap:20px;justify-content:center;flex-wrap:wrap;margin-top:40px;animation:fadeInUp 1s ease-out .6s both}
+.btn{padding:16px 32px;border:none;border-radius:var(--border-radius);font-weight:600;font-size:1rem;text-decoration:none;display:inline-flex;align-items:center;justify-content:center;gap:12px;transition:var(--transition);cursor:pointer;position:relative;overflow:hidden;min-height:48px;min-width:120px}.btn::before{content:'';position:absolute;top:0;left:-100%;width:100%;height:100%;background:linear-gradient(90deg,transparent,rgba(255,255,255,.2),transparent);transition:left .5s}.btn:hover::before{left:100%}.btn-primary{background:linear-gradient(135deg,#f59e0b 0%,#ea580c 100%);color:#fff;box-shadow:0 4px 15px rgba(245,158,11,.4);font-weight:700}.btn-secondary{background:rgba(255,255,255,.15);color:#fff;border:2px solid rgba(255,255,255,.8);backdrop-filter:blur(10px);font-weight:600}.btn:hover{transform:translateY(-3px);box-shadow:0 10px 30px rgba(0,0,0,.3)}
 
         /* Custom Animations */
         .animate-on-scroll {
@@ -1557,7 +1367,7 @@
 
     <!-- Floating WhatsApp Button -->
     <a href="https://wa.me/31634711217" class="whatsapp-float" aria-label="Contact us on WhatsApp" role="button">
-        <i class="fab fa-whatsapp" aria-hidden="true"></i>
+        <i class="fab fa-whatsapp" aria-hidden="true">&#xf232;</i>
     </a>
 
     <!-- Scripts -->
