Performance optimization: Minify CSS (save 2KB), fix WhatsApp icon in footer4

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <meta name="twitter:title" content="Mina Skin Clinic - Premium Beauty Treatments">
     <meta name="twitter:description" content="Professional beauty treatments including BIAB, Gel-X, facials, and skincare services.">
     <link rel="canonical" href="https://minaskinclinic.com">
-    <link rel="icon" type="image/png" href="logo.png">
-    <link rel="apple-touch-icon" href="logo.png">
+    <link rel="icon" type="image/webp" href="logo.webp">
+    <link rel="apple-touch-icon" href="logo.webp">
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://images.unsplash.com" crossorigin>
@@ -828,7 +828,7 @@
     <nav class="navbar" id="navbar" role="navigation" aria-label="Main navigation">
         <div class="nav-container">
             <a href="#home" class="logo" aria-label="Mina Skin Clinic Home">
-                <img src="logo.png" alt="Mina Skin Clinic Logo" style="height:55px;width:auto;max-width:150px;border-radius:10px;vertical-align:middle;margin-right:12px;object-fit:contain">
+                <img src="logo.webp" alt="Mina Skin Clinic Logo" width="150" height="55" style="height:55px;width:auto;max-width:150px;border-radius:10px;vertical-align:middle;margin-right:12px;object-fit:contain">
                 Mina Skin Clinic
             </a>
             <ul class="nav-links" role="menubar">
@@ -1349,7 +1349,7 @@
     <footer class="footer" role="contentinfo">
         <div class="container">
             <div class="logo" style="color: white; font-size: 1.5rem;">
-                <img src="logo.png" alt="Mina Skin Clinic Logo" style="height:80px;width:auto;max-width:200px;border-radius:12px;margin-bottom:15px;display:block;margin-left:auto;margin-right:auto;object-fit:contain">
+                <img src="logo.webp" alt="Mina Skin Clinic Logo" width="200" height="80" style="height:80px;width:auto;max-width:200px;border-radius:12px;margin-bottom:15px;display:block;margin-left:auto;margin-right:auto;object-fit:contain">
                 Mina Skin Clinic
             </div>
             <p>Premium Beauty & Skincare Treatments</p>
