Performance optimization: Minify CSS (save 2KB), fix WhatsApp icon in footer8

--- a/index.html
+++ b/index.html
@@ -964,7 +964,7 @@
     <nav class="navbar" id="navbar" role="navigation" aria-label="Main navigation">
         <div class="nav-container">
             <a href="#home" class="logo" aria-label="Mina Skin Clinic Home">
-                <img src="logo.webp" alt="Mina Skin Clinic Logo" width="150" height="55" style="height:55px;width:auto;max-width:150px;border-radius:10px;vertical-align:middle;margin-right:12px;object-fit:contain">
+                <img src="logo.webp" alt="Mina Skin Clinic Logo" width="128" height="47" loading="eager" decoding="async" style="height:55px;width:auto;max-width:150px;border-radius:10px;vertical-align:middle;margin-right:12px;object-fit:contain">
                 Mina Skin Clinic
             </a>
             <ul class="nav-links" role="menubar">
@@ -1147,7 +1147,7 @@
             
             <!-- Preview Card -->
             <div class="section-preview animate-on-scroll animate-delay-1">
-                <div class="section-preview-image" style="background-image: url('https://images.unsplash.com/photo-1599206676356-a6e55e59fa88?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80')"></div>
+                <div class="section-preview-image" style="background-image: url('https://images.unsplash.com/photo-1604654894610-df63bc536371?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80')"></div>
                 <div class="section-preview-content">
                     <h3>Gel Polish Treatments</h3>
                     <p>Gellac is a premium gel polish that provides chip-resistant, high-shine results lasting up to 3 weeks. Our treatments include complete manicure and pedicure services with professional gel polish application. Perfect for those who want beautiful, long-lasting nails without extensions. Starting from €40.</p>
@@ -1545,7 +1545,7 @@
     <footer class="footer" role="contentinfo">
         <div class="container">
             <div class="logo" style="color: #FFD700; font-size: 1.5rem;">
-                <img src="logo.webp" alt="Mina Skin Clinic Logo" width="200" height="80" style="height:80px;width:auto;max-width:200px;border-radius:12px;margin-bottom:15px;display:block;margin-left:auto;margin-right:auto;object-fit:contain">
+                <img src="logo.webp" alt="Mina Skin Clinic Logo" width="170" height="64" loading="lazy" decoding="async" style="height:80px;width:auto;max-width:200px;border-radius:12px;margin-bottom:15px;display:block;margin-left:auto;margin-right:auto;object-fit:contain">
                 Mina Skin Clinic
             </div>
             <p style="color: rgba(212,175,55,0.8);">Premium Beauty & Skincare Treatments</p>
