--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="preconnect" href="https://images.unsplash.com" crossorigin>
     <link rel="dns-prefetch" href="https://wa.me">
     <!-- LCP Image Preload -->
-    <link rel="preload" as="image" href="https://images.unsplash.com/photo-1560066984-138dadb4c035?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80" fetchpriority="high">
+    <link rel="preload" as="image" href="images/compressed-image.webp" fetchpriority="high">
     <style>
         @font-face{font-family:'Poppins';font-style:normal;font-weight:400;font-display:swap;src:url('data:font/woff2;base64,') format('woff2');}
         @font-face{font-family:'Air Quets';font-style:normal;font-weight:400;font-display:swap;src:url('data:font/woff2;base64,') format('woff2');}
@@ -224,13 +224,17 @@
 
         .logo {
             font-family: 'Air Quets', serif;
-            font-size: 2rem;
+            font-size: 1rem;
             font-weight: 500;
             background: var(--primary);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
             text-decoration: none;
+            display: flex;
+            align-items: center;
+            flex-direction: row;
+            gap: 8px;
         }
 
         .nav-links {
@@ -242,6 +246,11 @@
         .nav-links a {
             text-decoration: none;
             font-weight: 400;
+            display: inline-flex;
+            flex-direction: row;
+            align-items: center;
+            gap: 4px;
+            white-space: nowrap;
         }
 
         .nav-links a::after {
@@ -1105,7 +1114,7 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <!-- LCP Image for performance optimization -->
-        <img src="https://images.unsplash.com/photo-1560066984-138dadb4c035?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80" 
+        <img src="images/compressed-image.webp" 
              alt="Mina Skin Clinic - Premium Schoonheidssalon" 
              class="hero-bg-img"
              fetchpriority="high"
@@ -1577,8 +1586,8 @@
                     </div>
                 </div>
 
-                <div class="service-card glow">
-                    <div class="service-image" style="background-image: url('https://images.unsplash.com/photo-1560066984-138dadb4c035?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80')" role="img" aria-label="Gellac pedicure behandeling"></div>
+                <div class="service-card glow">https://images.unsplash.com/photo-1560066984-138dadb4c035?ixlib=rb-4.0.
+                    <div class="service-image" style="background-image: url('3&auto=format&fit=crop&w=800&q=80')" role="img" aria-label="Gellac pedicure behandeling"></div>
                     <div class="service-content">
                         <h3 class="service-title">Gellac & Pedicure</h3>
                         <p class="service-description">Langdurige gellak met luxe pedicurebehandeling voor mooie voeten.</p>
@@ -1722,7 +1731,7 @@
             
             <!-- Main Preview Card -->
             <div class="section-preview animate-on-scroll animate-delay-1">
-                <div class="section-preview-image" style="background-image: url('https://images.unsplash.com/photo-1560066984-138dadb4c035?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80')"></div>
+                <div class="section-preview-image" style="background-image: url('images/compressed-image.webp')"></div>
                 <div class="section-preview-content">
                     <h3>✨ Luxueuze Head Spa Ervaring</h3>
                     <p>Ervaar de ultieme ontspanning met onze Japanse Head Spa (€70-€90). Deze verjongende behandeling combineert hoofdhuidtherapie met ontspanningstechnieken voor gezond, mooi haar en een rustige geest. Voeg een gezichtsbehandeling toe voor de complete spa-ervaring.</p>
